--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -236,61 +236,116 @@
   font-weight: '900 bold 600 500 normal 200 100'
   font-style: italic regular*/
 
-.card-container {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+html {
+  height: 100%;
 }
 
-.card {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: left;
-  max-width: 250px;
-  max-height: 350px;
-  background-color: #252442;
-  border: 1px solid #F8F8FF;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
-  padding: 20px;
-  margin: 10px;
-}
-
-.card-image {
-  height: 44%;
-  max-width: 100%;
-}
-
-.card-title {
-  height: 8%;
-  margin: 3% 0;
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: bold;
-  color: #AA70A4;
-}
-
-.card-description {
-  height: 32%;
+body {
+  min-height: 100%;
+  margin: 0;
   font-family: 'Fira Sans', sans-serif;
   font-weight: normal;
-  color: #F8F8FF;
-  overflow: hidden;
+}
+
+
+.nav {
+  z-index: 1;
+  width: 100%;
+  height: 13.2vh;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-scroll {
+  background: linear-gradient(90deg, #201825 0%, #1d491d 100%), rgba(19, 19, 21, 0.4);
+  background-blend-mode: multiply;
+}
+
+.nav-logo {
+  height: 7.6vh;
+  padding-left: 4.7vw;
+}
+
+.nav-menu {
+  padding-right: 7.9vw;
+  font-size: 2.2vh;
+  color: #EAEAEC;
+}
+
+.hero-banner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   margin: 0;
 }
 
-.card-button {
-  height: 10%;
-  width: 30%;
-  border-radius: 3px;
-  border-style: none;
-  margin-top: 5%;
-  margin-left: 35%;
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: 400;
-  background-color: #AEEBFF;
-  color: #252442;
-  backdrop-filter: blur(2px);
+.hero-bg-img {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-image: url('./assets/hero-background.jpg');
+  background-size: cover;
+  background-position: center;
+  filter: blur(8px);
+}
+
+.hero-gradient {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background: linear-gradient(90deg, rgba(32, 24, 37, 0.66) 0%, rgba(29, 73, 29, 0.66) 100%);
+}
+
+.hero-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: right;
+  align-content: start;
+  overflow: hidden;
+}
+
+.hero-text {
+  margin-top: 26vh;
+  margin-right: 13vw;
+  width: 50vw;
+  height: fit-content;
+  font-size: 5vw;
+  color: #201825;
+}
+
+.hero-text small {
+  font-weight: 200;
+  font-size: 0.45em;
+}
+
+.hero-text b {
+  font-weight: bold;
+  color: #1D491D;
+
+}
+
+.hero-portrait {
+  margin-top: 13vh;
+  box-sizing: content-box;
+  width: 24vw;
+  height: 74vh;
+  margin-right: -4px;
+  border: 4px solid #62415C;
+  border-radius: 900px 0px 640px 400px;
+  background-image: url('./assets/hero-portrait.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 450px) {
+  .hero-banner {
+    display: none;
+  }
+
 }
